only master branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: Mirroring
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   to_codecommit:                                        # <-- different jobs are executed in parallel.
