--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,13 @@
 name: Mirroring
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   to_codecommit:                                        # <-- different jobs are executed in parallel.
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
     - uses: pixta-dev/repository-mirroring-action@v1
